finish openAPI & gps record
